--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scroll": "^1.8.9",
